algo-arena/service.yml
apiVersion: v1
kind: Service
metadata:
  name: algo-arena
spec:
  selector:
    app: algo-arena
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
